--- a/templates/hadoop/0/docker-compose.yml
+++ b/templates/hadoop/0/docker-compose.yml
@@ -1,167 +1,70 @@
-bootstrap-hdfs:
-  image: prashantpsingh/hadoop-base:dev
-  labels:
-    io.rancher.container.start_once: true
-  command: 'su -c "sleep 20 && exec /bootstrap-hdfs.sh" hdfs'
-  net: "container:namenode-primary"
-  volumes_from:
-    - namenode-primary-data
-sl-namenode-config:
-  image: prashantpsingh/hadoop-followers-config:dev
-  net: "container:namenode-primary"
+namenode:
+  image: prashantpsingh/hadoop
+  restart: always
+  command: bash /usr/local/hadoop-2.7.1/start-hadoop.sh namenode namenode secondarynamenode resourcemanager hadoop
   environment:
-    NODETYPE: "hdfs"
-  volumes_from:
-    - namenode-primary-data
-namenode-config:
-  image: prashantpsingh/hadoop-config:dev
-  net: "container:namenode-primary"
-  volumes_from:
-    - namenode-primary-data
-namenode-primary:
-  image: prashantpsingh/hadoop-base:dev
-  command: 'su -c "sleep 15 && /usr/local/hadoop-2.7.1/bin/hdfs namenode" hdfs'
-  volumes_from:
-    - namenode-primary-data
-  ports:
-    - 50070:50070
-  labels:
-    io.rancher.sidekicks: namenode-config,sl-namenode-config,bootstrap-hdfs,namenode-primary-data
-    io.rancher.container.hostname_override: container_name
-    io.rancher.scheduler.affinity:container_label_soft: io.rancher.stack_service.name=$${stack_name}/yarn-resourcemanager,io.rancher.stack_service.name=$${stack_name}/jobhistory-server
-    io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/datanode
-namenode-primary-data:
-  image: prashantpsingh/hadoop-base:dev
-  volumes:
-    - '${stack}-namenode-primary-config:/etc/hadoop'
-    - '/tmp'
-  net: none
-  labels:
-    io.rancher.container.start_once: true
-  command: '/bootstrap-local.sh'
-
-
-datanode-config:
-  image: prashantpsingh/hadoop-config:dev
-  net: "container:datanode"
-  volumes_from:
-    - datanode-data
-datanode-data:
-  image: prashantpsingh/hadoop-base:dev
-  net: none
-  volumes:
-    - '${stack}-datanode-config:/etc/hadoop'
-    - '/tmp'
-  labels:
-    io.rancher.container.start_once: true
-  command: '/bootstrap-local.sh'
+  - VCORES_NUM=${vcores-num}
+  - NM_MEM=${nm-mem}
+  - SCHEDULER_MIN_MB=${scheduler-min-mb}
+  - LOG_AGG=${log-agg}
+  - MAP_MEM=${map-mem}
+  - REDUCE_MEM=${reduce-mem}
+  - MAP_OPTS=${map-opts}
+  - REDUCE_OPTS={reduce-opts}
+  - DFS_REPLICATION=${dfs-replication}
+secondarynamenode:
+  image: prashantpsingh/hadoop
+  restart: always
+  command: bash /usr/local/hadoop-2.7.1/start-hadoop.sh secondarynamenode namenode secondarynamenode resourcemanager hadoop
+  environment:
+  - VCORES_NUM=${vcores-num}
+  - NM_MEM=${nm-mem}
+  - SCHEDULER_MIN_MB=${scheduler-min-mb}
+  - LOG_AGG=${log-agg}
+  - MAP_MEM=${map-mem}
+  - REDUCE_MEM=${reduce-mem}
+  - MAP_OPTS=${map-opts}
+  - REDUCE_OPTS={reduce-opts}
+  - DFS_REPLICATION=${dfs-replication}
 datanode:
-  image: prashantpsingh/hadoop-base:dev
-  volumes_from:
-    - datanode-data
-  labels:
-    io.rancher.sidekicks: datanode-config,datanode-data
-    io.rancher.container.hostname_override: container_name
-    io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/$${service_name}
-    io.rancher.scheduler.affinity:container_label_soft_ne: io.rancher.stack_service.name=$${stack_name}/namenode-primary,io.rancher.stack_service.name=$${stack_name}/yarn-resourcemanager
-    io.rancher.scheduler.affinity:container_label_soft: io.rancher.stack_service.name=$${stack_name}/yarn_nodemanager
-  links:
-    - 'namenode-primary:namenode'
-  command: 'su -c "sleep 45 && exec /usr/local/hadoop-2.7.1/bin/hdfs datanode" hdfs'
-
-yarn-nodemanager-config:
-  image: prashantpsingh/hadoop-config:dev
-  net: "container:yarn-nodemanager"
-  volumes_from:
-    - yarn-nodemanager-data
-yarn-nodemanager-data:
-  image: prashantpsingh/hadoop-base:dev
-  net: none
-  volumes:
-    - '${stack}-yarn-nodemanager-config:/etc/hadoop'
-    - '/tmp'
-  labels:
-    io.rancher.container.start_once: true
-  command: '/bootstrap-local.sh'
-yarn-nodemanager:
-  image: prashantpsingh/hadoop-base:dev
-  volumes_from:
-    - yarn-nodemanager-data
-  ports:
-    - '8042:8042'
-  labels:
-    io.rancher.container.hostname_override: container_name
-    io.rancher.sidekicks: yarn-nodemanager-config,yarn-nodemanager-data
-    io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/$${service_name}
-    io.rancher.scheduler.affinity:container_label_soft_ne: io.rancher.stack_service.name=$${stack_name}/namenode-primary,io.rancher.stack_service.name=$${stack_name}/yarn-resourcemanager,io.rancher.stack_service.name=$${stack_name}/jobhistory-server,
-    io.rancher.scheduler.affinity:container_label_soft: io.rancher.stack_service.name=$${stack_name}/datanode
-  links:
-    - 'namenode-primary:namenode'
-    - 'yarn-resourcemanager:yarn-rm'
-  command: 'su -c "sleep 45 && exec /usr/local/hadoop-2.7.1/bin/yarn nodemanager" yarn'
-
-jobhistory-server-config:
-  image: prashantpsingh/hadoop-config:dev
-  net: "container:jobhistory-server"
-  volumes_from:
-    - jobhistory-server-data
-jobhistory-server-data:
-  image: prashantpsingh/hadoop-base:dev
-  net: none
-  volumes:
-    - '${stack}-jobhistory-config:/etc/hadoop'
-    - '/tmp'
-  labels:
-    io.rancher.container.start_once: true
-  command: '/bootstrap-local.sh'
-jobhistory-server:
-  image: prashantpsingh/hadoop-base:dev
-  volumes_from:
-    - jobhistory-server-data
-  links:
-    - 'namenode-primary:namenode'
-    - 'yarn-resourcemanager:yarn-rm'
-  ports:
-    - '10020:10020'
-    - '19888:19888'
-  labels:
-    io.rancher.sidekicks: jobhistory-server-config,jobhistory-server-data
-    io.rancher.container.hostname_override: container_name
-    io.rancher.scheduler.affinity:container_label: io.rancher.stack_service.name=$${stack_name}/yarn-resourcemanager,io.rancher.stack_service.name=$${stack_name}/namenode-primary
-  command: 'su -c "sleep 45 && /usr/local/hadoop-2.7.1/bin/mapred historyserver" mapred'
-
-yarn-resourcemanager-config:
-  image: prashantpsingh/hadoop-config:dev
-  net: "container:yarn-resourcemanager"
-  volumes_from:
-    - yarn-resourcemanager-data
-sl-yarn-resourcemanager-config:
-  image: prashantpsingh/hadoop-followers-config:dev
-  net: "container:yarn-resourcemanager"
+  image: prashantpsingh/hadoop
+  restart: always
+  command: bash /usr/local/hadoop-2.7.1/start-hadoop.sh datanode namenode secondarynamenode resourcemanager hadoop
   environment:
-    NODETYPE: "yarn"
-  volumes_from:
-    - yarn-resourcemanager-data
-yarn-resourcemanager-data:
-  image: prashantpsingh/hadoop-base:dev
-  net: none
-  volumes:
-    - '${stack}-yarn-resourcemanager-config:/etc/hadoop'
-    - '/tmp'
-  labels:
-    io.rancher.container.start_once: true
-  command: '/bootstrap-local.sh'
-yarn-resourcemanager:
-  image: prashantpsingh/hadoop-base:dev
-  volumes_from:
-    - yarn-resourcemanager-data
-  ports:
-    - '8088:8088'
-  links:
-    - 'namenode-primary:namenode'
-  labels:
-    io.rancher.sidekicks: yarn-resourcemanager-config,sl-yarn-resourcemanager-config,yarn-resourcemanager-data
-    io.rancher.container.hostname_override: container_name
-    io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/$${service_name},io.rancher.stack_service.name=$${stack_name}/datanode,io.rancher.stack_service.name=$${stack_name}/yarn-nodemanager
-    io.rancher.scheduler.affinity:container_label: io.rancher.stack_service.name=$${stack_name}/namenode-primary
-  command: 'su -c "sleep 30 && /usr/local/hadoop-2.7.1/bin/yarn resourcemanager" yarn'
+  - VCORES_NUM=${vcores-num}
+  - NM_MEM=${nm-mem}
+  - SCHEDULER_MIN_MB=${scheduler-min-mb}
+  - LOG_AGG=${log-agg}
+  - MAP_MEM=${map-mem}
+  - REDUCE_MEM=${reduce-mem}
+  - MAP_OPTS=${map-opts}
+  - REDUCE_OPTS={reduce-opts}
+  - DFS_REPLICATION=${dfs-replication}
+resourcemanager:
+  image: prashantpsingh/hadoop
+  restart: always
+  command: bash /usr/local/hadoop-2.7.1/start-hadoop.sh resourcemanager namenode secondarynamenode resourcemanager yarn
+  environment:
+  - VCORES_NUM=${vcores-num}
+  - NM_MEM=${nm-mem}
+  - SCHEDULER_MIN_MB=${scheduler-min-mb}
+  - LOG_AGG=${log-agg}
+  - MAP_MEM=${map-mem}
+  - REDUCE_MEM=${reduce-mem}
+  - MAP_OPTS=${map-opts}
+  - REDUCE_OPTS={reduce-opts}
+  - DFS_REPLICATION=${dfs-replication}
+nodemanager:
+  image: prashantpsingh/hadoop
+  restart: always
+  command: bash /usr/local/hadoop-2.7.1/start-hadoop.sh nodemanager namenode secondarynamenode resourcemanager yarn
+  environment:
+  - VCORES_NUM=${vcores-num}
+  - NM_MEM=${nm-mem}
+  - SCHEDULER_MIN_MB=${scheduler-min-mb}
+  - LOG_AGG=${log-agg}
+  - MAP_MEM=${map-mem}
+  - REDUCE_MEM=${reduce-mem}
+  - MAP_OPTS=${map-opts}
+  - REDUCE_OPTS={reduce-opts}
+  - DFS_REPLICATION=${dfs-replication}
