--- a/templates/hadoop/0/rancher-compose.yml
+++ b/templates/hadoop/0/rancher-compose.yml
@@ -7,61 +7,67 @@
   maintainer: "Prashant Pratap Singh <singh.pp7@gmail.com>"
   uuid: hadoop-0
   questions:
-    - variable: "cpu_vcores"
+    - variable: "vcores-num"
       description: "yarn.nodemanager.resource.cpu-vcores"
       label: "Nodemanager cpu vcores:"
       required: true
       default: 4
       type: "int"
-    - variable: "resource_mem"
+    - variable: "nm-mem"
       description: "yarn.nodemanager.resource.memory-mb"
       label: "Nodemanager resource memory in mb:"
       required: true
       default: 2048
       type: "int"
-    - variable: "min_allocation"
+    - variable: "scheduler-min-mb"
       description: "yarn.scheduler.minimum-allocation-mb"
       label: "Scheduler Min Allocation in mb:"
       required: true
       default: 1024
       type: "int"
-namenode-primary:
+    - variable: "log-agg"
+      description: "yarn.log-aggregation-enable"
+      label: "Log Aggregation required?:"
+      required: true
+      default: "true"
+      type: "string"
+    - variable: "map-mem"
+      description: "mapreduce.map.memory.mb"
+      label: "Map memory:"
+      required: true
+      default: 512
+      type: "int"
+    - variable: "reduce-mem"
+      description: "mapreduce.reduce.memory.mb"
+      label: "Reduce memory:"
+      required: true
+      default: 512
+      type: "int"
+    - variable: "map-opts"
+      description: "mapreduce.map.java.opts"
+      label: "Map java opts:"
+      required: true
+      default: "-Xmx512m"
+      type: "string"
+    - variable: "reduce-opts"
+      description: "mapreduce.reduce.java.opts"
+      label: "Reduce java opts:"
+      required: true
+      default: "-Xmx1024m"
+      type: "string"
+    - variable: "dfs-replication"
+      description: "DFS replication"
+      label: "dfs replication:"
+      required: true
+      default: 1
+      type: "int"
+namenode:
   scale: 1
-  metadata: &hdfs_metadata
-    core-site:
-      hadoop.proxyuser.hue.hosts: "*"
-      hadoop.proxyuser.hue.groups: "*"
-    hdfs-site:
-      dfs.replication: "1"
-      dfs.webhdfs.enabled: "true"
+secondarynamenode:
+  scale: 1
 datanode:
   scale: 1
-  metadata: *hdfs_metadata
-yarn-resourcemanager:
+resourcemanager:
   scale: 1
-  metadata: &yarn_metadata
-    core-site:
-      hadoop.proxyuser.hue.hosts: "*"
-      hadoop.proxyuser.hue.groups: "*"
-    hdfs-site:
-      dfs-replication: "1"
-      dfs.webhdfs.enabled: "true"
-    yarn-site:
-      yarn.nodemanager.resource.cpu-vcores: ${cpu_vcores}
-      yarn.nodemanager.resource.memory-mb: ${resource_mem}
-      yarn.scheduler.minimum-allocation-mb: ${min_allocation}
-      yarn.nodemanager.aux-services: "mapreduce_shuffle"
-      yarn.log-aggregation-enable: "true"
-      yarn.log-aggregation.retain-seconds: 10800
-      yarn.log-aggregation.retain-check-interval-seconds: 3600
-    mapred-site:
-      mapreduce.map.memory.mb: "512"
-      mapreduce.reduce.memory.mb: "1024"
-      mapreduce.map.java.opts: "-Xmx512m"
-      mapreduce.reduce.java.opts: "-Xmx1024m"
-jobhistory-server:
+nodemanager:
   scale: 1
-  metadata: *yarn_metadata
-yarn-nodemanager:
-  scale: 1
-  metadata: *yarn_metadata
